--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,3 +6,10 @@
 .signupLoginBtns {
   margin: 2px;
 }
+
+.home {
+  position: absolute;
+  left: 50%;
+  top: 40%;
+  transform: translateX(-50%) translateY(-50%);
+}
