added jumbotron, new home page, login-dependent page

--- a/client/src/assets/_loadingScreen.scss
+++ b/client/src/assets/_loadingScreen.scss
@@ -1,3 +1,4 @@
+/* ===== Loading Screen ===== */
 // the color and type of the animation itself is located in ProtectedRoute.js
 
 // top half of background
@@ -30,3 +31,4 @@
   left: 50%;
   transform: translateX(-50%);
 }
+/* ==================================*/
