--- a/client/src/assets/index.scss
+++ b/client/src/assets/index.scss
@@ -1,7 +1,7 @@
-@use 'loadingScreen';
-@use 'loginSignup';
-@use 'fourOhFour';
-@use 'vars';
+@use '../components/ProtectedRoute/loadingScreen';
+@use '../components/LoginSignupPages/loginSignup';
+@use '../components/FourOhFour/fourOhFour';
+@use 'variables';
 
 /* ===== Home.js page ===== */
 .home {
