--- a/client/src/components/ProtectedRoute/_loadingScreen.scss
+++ b/client/src/components/ProtectedRoute/_loadingScreen.scss
@@ -1,6 +1,7 @@
 /* ===== Loading Screen ===== */
-// the color and type of the animation itself is located in ProtectedRoute.js
+.protected-route-component {
 
+// the color and type of the animation itself is located in ProtectedRoute.js
 // top half of background
 .loading {
   background-color: rgb(206, 255, 206);
@@ -30,5 +31,7 @@
   top: -100%;
   left: 50%;
   transform: translateX(-50%);
+}
+
 }
 /* ==================================*/
