--- a/client/src/components/LoginSignupPages/_loginSignup.scss
+++ b/client/src/components/LoginSignupPages/_loginSignup.scss
@@ -26,7 +26,7 @@
   overflow: hidden;
   background-size: 100%;
   min-width: 660px;
-  background-image: url(../images/bonsai-1920.jpg) ;
+  background-image: url(./images/bonsai-1920.jpg) ;
   background-repeat: no-repeat;
   text-align: right;
   background-position: 0% 10%;
