setup jest testing. added section and cover screen for loading

--- a/client/src/assets/index.css
+++ b/client/src/assets/index.css
@@ -1,5 +1,5 @@
 /* ===== Loading Screen ===== */
-.protected-route-component .loading {
+.loading-component .loading {
   background-color: #ceffce;
   height: 100px;
   width: 200px;
@@ -9,7 +9,7 @@
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
 }
-.protected-route-component .loading-bottom {
+.loading-component .loading-bottom {
   position: relative;
   background-color: #cde9f7;
   height: 50px;
@@ -18,11 +18,22 @@
   left: 50%;
   transform: translateX(-50%);
 }
-.protected-route-component .loading-bars {
+.loading-component .loading-bars {
   position: relative;
   top: -100%;
   left: 50%;
   transform: translateX(-50%);
+}
+.loading-component .screen-cover {
+  z-index: 9000;
+  width: 100vw;
+  height: 100vh;
+  opacity: 0.6;
+  background-color: azure;
+  position: fixed;
+}
+.loading-component .loading, .loading-component .loading-bottom, .loading-component .loading-bars {
+  z-index: 9999;
 }
 
 /* ==================================*/
