--- a/client/src/assets/index.scss
+++ b/client/src/assets/index.scss
@@ -1,4 +1,5 @@
 @use '../components/Loading/loadingScreen';
+@use '../components/LoginSignupPages/loginSignup';
 @use '../components/FourOhFour/fourOhFour';
 @use 'variables';
 
